# Notion-AgentsAI

./: AGENTS.md  README.md
Voice-Agent/: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  RECAP-INVESTIGACION-Y-PLAN.md  Voice-Agent-Status.pptx  alembic.ini  docker-compose.yml  env.example  planDomingo12-04.md  pyproject.toml  railway.json
Voice-Agent/.atl/: skill-registry.md
Voice-Agent/.claude/: settings.local.json
Voice-Agent/.engram/: manifest.json
Voice-Agent/adapters/: README.md
Voice-Agent/adapters/calendar/: README.md
Voice-Agent/adapters/crm/: README.md
Voice-Agent/adapters/kb_ingestion/: README.md
Voice-Agent/adapters/notifications/: README.md
Voice-Agent/alembic/: env.py
Voice-Agent/alembic/versions/: 0001_create_tenants_table.py  0002_create_tenant_secrets_audit.py
Voice-Agent/apps/: launcher.py
Voice-Agent/apps/pipeline/: __init__.py  agent.py
Voice-Agent/apps/realtime/: __init__.py  agent.py
Voice-Agent/core/: README.md
Voice-Agent/core/capabilities/: README.md  base.py
Voice-Agent/core/db/: __init__.py  engine.py  models.py
Voice-Agent/core/escalation/: README.md
Voice-Agent/core/flows/: engine.py
Voice-Agent/core/knowledge/: README.md  base.py
Voice-Agent/core/llm/: README.md  base.py  claude.py  gemini.py  groq.py  ollama.py  openai.py  openai_llm.py  openai_realtime.py
Voice-Agent/core/memory/: README.md  base.py
Voice-Agent/core/observability/: tracing.py
Voice-Agent/core/orchestrator/: README.md  agent.py  config.py  local.py  models.py  pipeline.py  tenant_context.py
Voice-Agent/core/rag/: README.md  base.py  qdrant.py
Voice-Agent/core/stt/: README.md  base.py  deepgram.py  deepgram_stt.py  (+3 more)
Voice-Agent/dashboard/: README.md
Voice-Agent/docs/: architecture.md  requirements.md
Voice-Agent/scripts/: dispatch_agent.py  gen_token.py  list_voices.py  rotate_master_key.py  sanity_tenant_vault.py  seed_tenant.py  setup_sip.py  test_client.py  test_elevenlabs.py  test_fish_tones.py  test_tts.py
Voice-Agent/tests/: README.md  fakes.py  test_smoke.py
Voice-Agent/verticals/: README.md
Voice-Agent/voice_agent/: __main__.py
Voice-Agent/workspace/: notion-context.md
(+79 files in other folders)
