[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=1.0",
    "elevenlabs>=1.0",
    "python-dotenv>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "deepgram-sdk>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
