[project]
name = "voice-agent"
version = "0.1.0"
description = "Voice Agent Platform — arquitectura de adapters por capa"
requires-python = ">=3.11,<3.14"
dependencies = [
    # LiveKit Agents 1.x — pipeline de voz en tiempo real
    "livekit-agents>=1.0,<2.0",
    "livekit-plugins-anthropic>=1.0,<2.0",
    "livekit-plugins-openai>=1.0,<2.0",
    "livekit-plugins-elevenlabs>=1.0,<2.0",
    "livekit-plugins-silero>=1.0,<2.0",
    "livekit-plugins-deepgram>=1.0,<2.0",
    "livekit-plugins-cartesia>=1.0,<2.0",
    # SDKs directos — para transcripción/síntesis sin LiveKit pipeline
    "anthropic>=0.40",
    "openai>=1.0",
    "elevenlabs>=1.0",
    # Configuración
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "livekit-plugins-google>=1.0,<2.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "adapters", "verticals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
